# Yamada

./: .gitignore  PKG-INFO  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: conf.py  index.rst
docs/source/: README.rst  conf.py  examples.html  examples.rst  getting_started.html  getting_started.rst  index.rst  yamada.rst
examples/: generate_all_unique_spatial_graphs.py  generate_all_unique_spatial_graphs_2.py  ip1.py  ip2.py  my_output_data.json  scratch.py  temp_2.py  workflow_troubleshooting.py
examples/analyzing_enumerated_topologies/: workflow.py  workflow2.py  workflow3.py
examples/calculate_yamada_polynomial_automatic/: demo.ipynb
examples/calculate_yamada_polynomial_manual/: calculate_yamada_polynomial_manual.ipynb  demo.ipynb
examples/calculate_yamada_polynomial_semiautomatic/: calculate_yamada_polynomial_semiautomatic.ipynb  demo.ipynb
examples/calculate_yamada_polynomials/: automatic_calculation.ipynb  automatic_demo.py  automatically_labeled_calculation.ipynb  manually_labeled_calculation.ipynb  routing_with_obstacles.ipynb  routing_with_obstacles.py  semiautomatic_calculation.ipynb  temp.py  workflow.py
examples/create_spatial_topology/: automatically_labeled_calculation.ipynb  manually_labeled_calculation.ipynb
examples/cube/: generate_routings.py
examples/distinct_topos/: workflow.py
examples/enumerate_spatial_topologies/: enumeration.py  not_implemented_workflow.py  workflow.py
examples/scratch/: 3Dviz.py  anti_reidemeister_moves.py  debugging.py  example_cube.py  example_cube_2.py  example_cube_3.py  example_cube_4.py  example_cube_5.py  example_routing.py  r2_example.py  r2_test.py  r3_test.py  reidemeister_moves.py  reidemeister_moves_2.py  scratch.py  sgd_top_distance.py  topological_distance.py  transformations.py
examples/spatial_topology_enumeration/: demo.py
examples/utilities/: scratch.py
src/Yamada.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/yamada/: Anti_Reidemeister.py  Reidemeister.py  __init__.py  calculation.py  data.py  enumeration.py  geometry.py  h_poly.py  laurent_polynomial.py  projection.py  spatial_graph_diagrams.py  spatial_graph_enumeration.py  spatial_graphs.py  topological_distance.py  utilities.py  visualization.py
tests/: conftest.py  convert_notebooks_to_scripts.py  test_manual.tex  test_temp.py
tests/fixtures/: fixtures_poly.py  fixtures_sgd_Drobrynin_and_Vesnin.py  fixtures_sgd_invalid.py  fixtures_sgd_knots.py  fixtures_sgd_unknot.py  fixtures_sgd_unknot_1_crossing.py  fixtures_sgd_unknot_double_twist.py  fixtures_sgd_unknot_n_crossings.py  fixtures_sgd_unknot_single_twist.py  poly_fixtures.py  sgd_fixtures.py
tests/test_fixtures/: test_sgd_Drobrynin_and_Vesnin.py  test_sgd_invalid_diagrams.py  test_sgd_knots.py  test_sgd_unknot.py  test_sgd_unknot_double_twist.py  test_sgd_unknot_single_twist.py
tests/test_notebook_to_script_conversion/: test_H_polynomial.py  (+12 more)
(+1227 files in other folders)
