[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[project]
name = "Yamada"
version = "0.2.1"
authors = [
  { name="Chad Peterson", email="cp44@illinois.edu" },
  { name="Nathan Dunfield", email="nmd@illinois.edu"},
]

description = "Calculate the Yamada polynomial of spatial topologies."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "networkx~=2.8.5",
    "matplotlib",
    "numpy",
    "cypari~=2.4.1",
    "jupyter",
    "nbconvert",
    "pytest",
]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "sphinx",
]


[tool.pytest.ini_options]
pythonpath = [
    ".",
    "tests/",
]

[project.urls]
"Homepage" = "https://github.com/Chad-Peterson/Yamada"
"Bug Tracker" = "https://github.com/Chad-Peterson/Yamada/issues"